--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -67,7 +67,7 @@
 
             // Start of Responsiveness
             @include tablet {
-                width: 10rem;
+                width: 11.25rem;
             }
 
         &:hover {
